--- a/springboot-web/pom.xml
+++ b/springboot-web/pom.xml
@@ -93,6 +93,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- SensorsAnalyticsSDK -->
+        <dependency>
+            <groupId>com.sensorsdata.analytics.javasdk</groupId>
+            <artifactId>SensorsAnalyticsSDK</artifactId>
+            <version>3.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
