--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,27 @@
                 <version>3.10.0</version>
             </dependency>
 
+            <!-- crm -->
+            <dependency>
+                <groupId>org.wltea.analyzer</groupId>
+                <artifactId>IKAnalyzer</artifactId>
+                <version>2012FF_u1</version>
+                <scope>system</scope>
+                <systemPath>${project.basedir}/lib/ingageSDK.jar
+                </systemPath>
+            </dependency>
+
+
+            <!-- 神策 -->
+            <dependency>
+                <groupId>com.sensorsdata.analytics.javasdk</groupId>
+                <artifactId>SensorsAnalyticsSDK</artifactId>
+                <version>3.1.7</version>
+                <scope>system</scope>
+                <systemPath>${project.basedir}/lib/SensorsAnalyticsSDK-3.1.6-standalone.jar
+                </systemPath>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
