--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,20 @@
                 <version>3.1.6</version>
             </dependency>
 
+
+            <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+            <dependency>
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>3.1</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>2.0.4.RELEASE</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
