--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+
         <module>springboot-api</module>
         <module>springboot-common</module>
         <module>springboot-service</module>
-        <module>springboot-web</module>
         <module>springboot-dao</module>
         <module>springboot-manager</module>
+        <module>springboot-web</module>
     </modules>
 
 
@@ -174,25 +175,18 @@
                 <version>3.10.0</version>
             </dependency>
 
-            <!-- crm -->
-            <dependency>
-                <groupId>org.wltea.analyzer</groupId>
-                <artifactId>IKAnalyzer</artifactId>
-                <version>2012FF_u1</version>
-                <scope>system</scope>
-                <systemPath>${project.basedir}/lib/ingageSDK.jar
-                </systemPath>
-            </dependency>
-
 
             <!-- 神策 -->
             <dependency>
                 <groupId>com.sensorsdata.analytics.javasdk</groupId>
                 <artifactId>SensorsAnalyticsSDK</artifactId>
-                <version>3.1.7</version>
-                <scope>system</scope>
-                <systemPath>${project.basedir}/lib/SensorsAnalyticsSDK-3.1.6-standalone.jar
-                </systemPath>
+                <!--<name>SensorsAnalyticsSDK</name>-->
+                <version>3.1.7-standalone</version>
+                <!--<groupId>com.sensorsdata.analytics.javasdk</groupId>-->
+                <!--<artifactId>SensorsAnalyticsSDK</artifactId>-->
+                <!--<version>3.1.6-standalone</version>-->
+                <!--<scope>system</scope>-->
+                <!--<systemPath>${project.basedir}/springboot-web/src/main/lib/SensorsAnalyticsSDK-3.1.6-standalone.jar</systemPath>-->
             </dependency>
 
         </dependencies>
