--- a/springboot-web/pom.xml
+++ b/springboot-web/pom.xml
@@ -98,14 +98,12 @@
         <dependency>
             <groupId>com.sensorsdata.analytics.javasdk</groupId>
             <artifactId>SensorsAnalyticsSDK</artifactId>
-            <version>3.1.7</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../lib/SensorsAnalyticsSDK-3.1.6-standalone.jar
-            </systemPath>
         </dependency>
 
     </dependencies>
-
+    <properties>
+        <docker.image.prefix>dockerrepo.vphotos.cn</docker.image.prefix>
+    </properties>
     <build>
         <!-- 自定义该模块的jar包名称,用于发布 -->
         <finalName>${pro.name}</finalName>
