修改到前台运行

--- a/springboot-web/src/main/docker/Dockerfile
+++ b/springboot-web/src/main/docker/Dockerfile
@@ -3,7 +3,9 @@ FROM openjdk:8
 WORKDIR /opt/apps
 
 # 添加项目
-ADD ./vphotobi.zip
+ADD ./vphotobi.zip ./
+RUN /usr/bin/unzip ./vphotobi.zip
 
+EXPOSE 10000
 
-CMD ["sh","-c","./vphotobi/bin/single.sh","restart"]
+CMD ["sh","-c","./bin/single.sh","start"]
