--- a/springboot-web/pom.xml
+++ b/springboot-web/pom.xml
@@ -100,6 +100,21 @@
             <artifactId>SensorsAnalyticsSDK</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
     </dependencies>
     <properties>
         <docker.image.prefix>dockerrepo.vphotos.cn</docker.image.prefix>
