--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <env>dev</env>
 
         <!-- 定义版本号 -->
-        <pro.name>springboot-web</pro.name>
+        <pro.name>vphotobi</pro.name>
         <pro.version>1.0-SNAPSHOT</pro.version>
 
         <!-- 引用版本号 -->
