--- a/springboot-web/src/main/resources/application.yml
+++ b/springboot-web/src/main/resources/application.yml
@@ -24,4 +24,9 @@ logging:
   path: ${LOGGING_PATH}
   register-shutdown-hook: false
 
+convertlab:
+  grantType: client_credentials
+  appid: cl00e8165b310edb5
+  secret: c8f9cdcb0659bfe18bbb6a05fc9cc584ded3bd72
+  tenantId: 1661
 
